fixed type and spacing

--- a/index.css
+++ b/index.css
@@ -308,8 +308,8 @@ body {
 
 .heading-container {
   position: relative;
-  width: 35%;
-  margin-top: 10em;
+  width: 40%;
+  margin-top: 6em;
 }
 
 .waving-hand-wrapper {
